Fixed z-index for characterlist

--- a/src/aftermath/aftermath.less
+++ b/src/aftermath/aftermath.less
@@ -23,6 +23,7 @@
     top: 0;
     right: 0;
     bottom: 0;
+    z-index: 10;
     width: 250px;
     pointer-events: none;
     @media @device-mobile {
