--- a/src/aftermath/character-list/character-list.less
+++ b/src/aftermath/character-list/character-list.less
@@ -6,7 +6,6 @@
     height: 100%;
     overflow: hidden;
     width: 100%;
-    z-index: 2;
 }
 
 .character-list-background {
